--- a/Template/masterpage.html
+++ b/Template/masterpage.html
@@ -1,219 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <meta charset="UTF-8">
-        <title>Esale Promotion</title>
-        <!-- Tell the browser to be responsive to screen width -->
-        <link rel="shortcut icon" href="{{common_url}}/img/favicon.ico" />
-        <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-        <!-- Bootstrap 3.3.4 -->
-        <link href="{{common_url}}/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <!-- FontAwesome 4.3.0 -->
-        <link href="{{common_url}}/bootstrap/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <!-- Ionicons 2.0.0 -->
-        <link href="{{common_url}}/css/ionicons.min.css" rel="stylesheet" type="text/css" />
-        <!-- Theme style -->
-        <link href="{{common_url}}/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
-        <!-- AdminLTE Skins. Choose a skin from the css/skins
-             folder instead of downloading all of them to reduce the load. -->
-        <link href="{{common_url}}/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css" />
-        <!-- iCheck -->
-        <link href="{{common_url}}/plugins/iCheck/flat/blue.css" rel="stylesheet" type="text/css" />
-        <!-- Morris chart -->
-        <link href="{{common_url}}/plugins/morris/morris.css" rel="stylesheet" type="text/css" />
-        <!-- jvectormap -->
-        <link href="{{common_url}}/plugins/jvectormap/jquery-jvectormap-1.2.2.css" rel="stylesheet" type="text/css" />
-        <!-- Date Picker -->
-        <link href="{{common_url}}/plugins/datepicker/datepicker3.css" rel="stylesheet" type="text/css" />
-        <!-- Daterange picker -->
-        <link href="{{common_url}}/plugins/daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css" />
-        <!-- bootstrap wysihtml5 - text editor -->
-        <link href="{{common_url}}/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" type="text/css" />
-
-        <link href="{{common_url}}/css/jquery.datetimepicker.css" rel="stylesheet" type="text/css" />
-        
-        <link href="{{common_url}}/css/mystyle.css?v={{static_version}}" rel="stylesheet" type="text/css" />
-
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-            <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <link rel="stylesheet" type="text/css" href="{{static_url}}/css/screen.css" />
+        <title>Thẻ Giá Rẻ - Mua lẻ với giá sỉ</title>
     </head>
-    <body class="skin-blue sidebar-mini">
-        <input type="hidden" id="urlStatic" value="{{common_url}}" />
-        <div class="wrapper">
-            <header class="main-header">
-                <!-- Logo -->
-                <a href="index2.html" class="logo">
-                    <!-- mini logo for sidebar mini 50x50 pixels -->
-                    <span class="logo-mini"><b>EP</b></span>
-                    <!-- logo for regular state and mobile devices -->
-                    <span class="logo-lg"><b>Esale Promotion</b></span>
-                </a>
-                <!-- Header Navbar: style can be found in header.less -->
-                <nav class="navbar navbar-static-top" role="navigation">
-                    <!-- Sidebar toggle button-->
-                    <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                        <span class="sr-only">Toggle navigation</span>
-                    </a>
-                </nav>
-            </header>
-            <!-- Left side column. contains the logo and sidebar -->
-            <aside class="main-sidebar">
-                <!-- sidebar: style can be found in sidebar.less -->
-                <section class="sidebar">
-                    <!-- Sidebar user panel -->
-                    <div class="user-panel">
-                        <div class="pull-left image">
-                            <img src="{{avatar}}" class="img-circle" alt="User Image" />
-                        </div>
-                        <div class="pull-left info">
-                            <p>{{fullname}}</p>
-                            <a href="javascript:;" onclick="signOut()"><i class="fa fa-sign-out"></i>Thoát</a>
-                        </div>
-                    </div>
-                    <!-- sidebar menu: : style can be found in sidebar.less -->
-                    <ul class="sidebar-menu" id="menuLeft">
-                        <li class="header left_header">TẶNG VOUCHER</li>
-                        {{#CONFIG}}
-                        <li id="liConfig">
-                            <a href="javascript:;">
-                                <i class="fa fa-cogs"></i> <span>Thiết lập chương trình</span>
-                            </a>
-                        </li>
-                        {{/CONFIG}}
-                        {{#REPORT}}
-                        <li id="liReport" class="treeview">
-                            <a href="javascript:;">
-                                <i class="fa fa-line-chart"></i> <span>Báo cáo</span>
-                            </a>
-                            <ul class="treeview-menu" id="reportMenu">
-                                <li id="reportGeneral"><a href="javascript:;"><i class="fa fa-circle-o"></i> Báo cáo tổng hợp</a></li>
-                                <li id="reportHistory"><a href="javascript:;"><i class="fa fa-circle-o"></i> Lịch sử Voucher</a></li>
-                            </ul>
-                        </li>
-                        {{/REPORT}}
-                        {{#RETRYSMS}}
-                        <li id="liRetrySendSMS">
-                            <a href="javascript:;">
-                                <i class="fa fa-envelope"></i><span>Gửi lại tin nhắn</span>
-                            </a>
-                        </li>
-                        {{/RETRYSMS}}
-                        
-                        <li class="header left_header">TẶNG CODEGAME</li>
-                        <li id="liConfigCodeGame">
-                            <a href="javascript:;">
-                                <i class="fa fa-cogs"></i> <span>Thiết lập sự kiện</span>
-                            </a>
-                        </li>
-                        <li id="liListEventCodeGame">
-                            <a href="javascript:;">
-                                <i class="fa fa-list-ul"></i> <span>Danh sách sự kiện</span>
-                            </a>
-                        </li>
-                        <li id="liListGame">
-                            <a href="javascript:;">
-                                <i class="fa fa-list-ul"></i> <span>Danh sách Game</span>
-                            </a>
-                        </li>
-                        <li id="liCodeGameReport">
-                            <a href="javascript:;">
-                                <i class="fa fa-line-chart"></i> <span>Báo cáo</span>
-                            </a>
-                        </li>
-                        
-                        {{#QUAYSO}}
-                        <li class="header left_header">QUAY SỐ</li>
-                        <li id="liWheelList">
-                            <a href="javascript:;">
-                                <i class="fa fa-list-ul"></i> <span>Danh sách chương trình</span>
-                            </a>
-                        </li>
-                        <li id="liWheelConfig">
-                            <a href="javascript:;">
-                                <i class="fa fa-cogs"></i> <span>Thiết lập chương trình</span>
-                            </a>
-                        </li>
-                        <li id="liWheelReport">
-                            <a href="javascript:;">
-                                <i class="fa fa-table"></i> <span>Báo cáo tổng hợp</span>
-                            </a>
-                        </li>
-                        {{/QUAYSO}}
+    <body>
+        <div class="top">
+            <div class="wrap">
+                <h1 class="logo"><a href="#" title="Trang chủ"><img src="{{static_url}}/images/logo.png" alt=""></a></h1>
+                <ul>
+                    <li><p><span>VIETTEL</span> khuyến mại 50% ngày 14/11/2015 <em>(1 ngày duy nhất)</em></p></li>
+                    <li><p><span>Vinaphone</span> khuyến mại 50% ngày 11/11/2015 <em>(1 ngày duy nhất)</em></p></li>
+                    <li><p><span>Mobifone</span> khuyến mại 50% ngày 05/11/2015 <em>(1 ngày duy nhất)</em></p></li>
+                </ul>
+            </div>
+        </div>
+        <div class="menu">
+            <div class="wrap">
+                <ul>
+                    <li><a class="current" href="#"><span class="sprt icohome"></span></a></li>
+                    <li><a href="#">MUA MÃ THẺ ĐIỆN THOẠI</a></li>
+                    <li><a href="#">MUA MÃ THẺ GAME</a></li>
+                    <li><a href="#">NẠP THẺ ĐIỆN THOẠI</a></li>
+                    <li><a href="#">NẠP TIỀN GAME</a></li>
+                    <li><a href="#">BẢNG GIÁ</a></li>
+                    <li><b>0908 246 357</b> <em>HOTLINE</em></li>
+                </ul>
+            </div>
+        </div>
+        <div class="hotnews">
+            <div class="wrap">Không cần tạo tài khoản: <strong>AN TOÀN - ĐƠN GIẢN - GIÁ RẺ</strong></div>
+        </div>
+        <div class="main clearfix">
+            {{main_content}}
+        </div>
+        <div class="footer clearfix">
+            <div class="wrap">
+                <h4>HỖ TRỢ THANH TOÁN</h4>
+                <div class="boxbank clearfix">
+                    <a class="icoarrow" href="#"><span class="sprt icoarrowpre dis"></span></a>
+                    <ul>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
-                </section>
-                <!-- /.sidebar -->
-            </aside>
-
-            <!-- Content Wrapper. Contains page content -->
-            <div class="content-wrapper">
-                <!-- Content Header (Page header) -->
-                <section class="content-header">
-                    <h1 id="mainTitle">
-                        {{main_title}}
-                    </h1>
-                </section>
-                <section class="content" id="mainContent">
-                    {{main_content}}
-                </section>
-            </div><!-- /.content-wrapper -->
-            <footer class="main-footer">
-                <div class="pull-right hidden-xs">
-                    <b>Version</b> 1.0
+                    <a class="icoarrow rt" href="#"><span class="sprt icoarrownext"></span></a>
                 </div>
-                <strong>Copyright &copy; 2014-2015 <a href="https://esale.zing.vn">Esale</a>.</strong> All rights reserved.
-            </footer>
-            <!-- Add the sidebar's background. This div must be placed
-                 immediately after the control sidebar -->
-            <div class="control-sidebar-bg"></div>
-        </div><!-- ./wrapper -->
+                <div class="boxend">
+                    <p class="fl">
+                        Bản quyền của <b>Công ty TNHH Giải Pháp Phần Mềm PTA Việt Nam</b><br>
+                            Giấy phép kinh doanh số 0312401085
+                    </p>
+                    <p class="fr"><a href="#"><span class="sprt logobct"></span></a></p>
+                </div>
+            </div>
+        </div>
 
-        <!-- jQuery 2.1.4 -->
-        <script src="{{common_url}}/plugins/jQuery/jquery-1.11.1.js"></script>
-        <!-- jQuery UI 1.11.4 -->
-        <script src="{{common_url}}/plugins/jQueryUI/jquery-ui.min.js" type="text/javascript"></script>
-        <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-        <script type="text/javascript">
-                                $.widget.bridge('uibutton', $.ui.button);
-        </script>
-        <!-- Bootstrap 3.3.2 JS -->
-        <script src="{{common_url}}/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-        <!-- Morris.js charts -->
-        <script src="{{common_url}}/js/raphael-min.js"></script>
-        <!-- Sparkline -->
-        <script src="{{common_url}}/plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
-        <!-- jvectormap -->
-        <script src="{{common_url}}/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js" type="text/javascript"></script>
-        <script src="{{common_url}}/plugins/jvectormap/jquery-jvectormap-world-mill-en.js" type="text/javascript"></script>
-        <!-- jQuery Knob Chart -->
-        <script src="{{common_url}}/plugins/knob/jquery.knob.js" type="text/javascript"></script>
-        <!-- daterangepicker -->
-        <script src="{{common_url}}/js/moment.min.js" type="text/javascript"></script>
-        <script src="{{common_url}}/plugins/daterangepicker/daterangepicker.js" type="text/javascript"></script>
-        <!-- datepicker -->
-        <script src="{{common_url}}/plugins/datepicker/bootstrap-datepicker.js" type="text/javascript"></script>
-        <!-- Bootstrap WYSIHTML5 -->
-        <script src="{{common_url}}/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
-        <!-- Slimscroll -->
-        <script src="{{common_url}}/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-        <!-- FastClick -->
-        <script src="{{common_url}}/plugins/fastclick/fastclick.min.js" type="text/javascript"></script>
-        <!-- AdminLTE App -->
-        <script src="{{common_url}}/js/app.min.js" type="text/javascript"></script>
-        <!-- AdminLTE for demo purposes -->
-        <script src="{{common_url}}/js/demo.js" type="text/javascript"></script>
 
-        <script src="{{common_url}}/js/cookie.min.js" type="text/javascript"></script>
-                
-        <script src="{{common_url}}/js/jquery.datetimepicker.full.min.js" type="text/javascript"></script>
-        
-        <script src="{{common_url}}/js/jquery.datetimepicker.min.js" type="text/javascript"></script>
-
-        <script src="https://apis.google.com/js/api:client.js"></script>
-
-        <script src="{{common_url}}/js/{{jsfile}}?v={{static_version}}" type="text/javascript"></script>
-    </body>
-</html>
+    </body></html>
