--- a/Template/masterpage.html
+++ b/Template/masterpage.html
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <link rel="stylesheet" type="text/css" href="{{static_url}}/css/screen.css" />
+        <link rel="stylesheet" type="text/css" href="{{static_url}}/css/screen.css?version={{static_version}}" />
+        <script type="text/javascript" src="{{static_url}}/js/jquery-1.11.1.js"></script>
+        <script type="text/javascript" src="{{static_url}}/js/script.js?version={{static_version}}"></script>
         <title>Thẻ Giá Rẻ - Mua lẻ với giá sỉ</title>
     </head>
     <body>
