--- a/Template/salecard.html
+++ b/Template/salecard.html
@@ -4,13 +4,13 @@
     <div class="boxcontent clearfix">
         <div class="colfrist fl">
             <div class="bxcontent card">
-                <table width="100%" border="0" cellspacing="0" cellpadding="10">
+                <table width="100%" border="0" cellspacing="0" cellpadding="10" id="tableSaleCard">
                     <tbody>
                         {{list_card}}
                         <tr>
                             <td class="boxcard">&nbsp;</td>
                             <td colspan="3" class="coltotal" align="right">Thanh toán: <span id="totalAmount">0</span> <em>VNĐ</em></td>
-                            <td align="right"><a class="btnaction" href="#">Tiếp tục</a></td>
+                            <td align="right"><a class="btnaction" href="javascript:;" onclick="acceptChooseCard();">Tiếp tục</a></td>
                         </tr>
                     </tbody></table>
             </div>
