--- a/Template/masterpage.html
+++ b/Template/masterpage.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" type="text/css" href="{{static_url}}/css/screen.css?version={{static_version}}" />
         <script type="text/javascript" src="{{static_url}}/js/jquery-1.11.1.js"></script>
+        <script type="text/javascript" src="{{static_url}}/js/common.js?version={{static_version}}"></script>
         <script type="text/javascript" src="{{static_url}}/js/script.js?version={{static_version}}"></script>
         <title>Thẻ Giá Rẻ - Mua lẻ với giá sỉ</title>
     </head>
