--- a/Template/payment.html
+++ b/Template/payment.html
@@ -4,39 +4,11 @@
     <div class="boxpayment clearfix">
         <div class="row">
             <span class="row_st">Thanh toán</span>
-            <span class="row_nd"><span>95.000 <em>VNĐ</em></span></span>
+            <span class="row_nd"><span>{{total_amount}} <em>VNĐ</em></span></span>
         </div>
         <p>Chọn ngân hàng thanh toán</p>
-        <ul class="clearfix">
-            <li class="sel"><a href="#"><span class="sprt icoselcard"></span><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li class="sel"><a href="#"><span class="sprt icoselcard"></span><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
-            <li><a href="#"><span class="sprtbank logobank vietcombank"></span></a></li>
+        <ul class="clearfix" id="listBank">
+            {{list_bank}}
         </ul>
         <p class="ctnbtn"><a href="#" class="btnaction">Thanh toán</a><a href="#" class="btncancel">Quay lại</a></p>
     </div>
