--- a/Template/masterpage.html
+++ b/Template/masterpage.html
@@ -11,7 +11,7 @@
     <body>
         <div class="top">
             <div class="wrap">
-                <h1 class="logo"><a href="#" title="Trang chủ"><img src="{{static_url}}/images/logo.png" alt=""></a></h1>
+                <h1 class="logo"><a href="/" title="Trang chủ"><img src="{{static_url}}/images/logo.png" alt=""></a></h1>
                 <ul>
                     <li><p><span>VIETTEL</span> khuyến mại 50% ngày 14/11/2015 <em>(1 ngày duy nhất)</em></p></li>
                     <li><p><span>Vinaphone</span> khuyến mại 50% ngày 11/11/2015 <em>(1 ngày duy nhất)</em></p></li>
