--- a/Template/masterpage.html
+++ b/Template/masterpage.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="hotnews">
-            <div class="wrap">Không cần tạo tài khoản: <strong>AN TOÀN - ĐƠN GIẢN - GIÁ RẺ</strong></div>
+            <div class="wrap">Không cần tạo tài khoản: <strong>AN TOÀN - ĐƠN GIẢN - GIÁ RẺ <span style="color: red">- Miễn phí phí thanh toán qua thẻ ATM</span></strong></div>
         </div>
         <div class="main clearfix">
             {{main_content}}
