--- a/Template/payment.html
+++ b/Template/payment.html
@@ -5,6 +5,10 @@
             <span class="row_st">Thanh toán</span>
             <span class="row_nd"><span>{{total_amount}} <em>VNĐ</em></span></span>
         </div>
+        <div class="row">
+            <span class="row_st">Phí ngân hàng</span>
+            <span class="row_nd"><span style="color: #43B649">Miễn phí</span></span>
+        </div>
         <p>Chọn ngân hàng thanh toán</p>
         <ul class="clearfix" id="listBank">
             {{list_bank}}
