--- a/Template/payment_finish.html
+++ b/Template/payment_finish.html
@@ -31,22 +31,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td class="boxcard">
-                                <a class="imgcard sel" href="#"><img src="{{static_url}}/images/cards/viettel10.jpg" alt=""> </a>
-                            </td>
-                            <td class="colseri">042064000001073</td>
-                            <td class="colcode">0169479483771</td>
-                            <td class="colbtn"><a class="btnaction" href="#">Copy mã thẻ</a></td>
-                        </tr>
-                        <tr>
-                            <td class="boxcard">
-                                <a class="imgcard sel" href="#"><img src="{{static_url}}/images/cards/viettel100.jpg" alt=""> </a>
-                            </td>
-                            <td class="colseri">042064000001073</td>
-                            <td class="colcode">0169479483771</td>
-                            <td class="colbtn"><a class="btnaction" href="#">Copy mã thẻ</a></td>
-                        </tr>
+                        {{list_card}}
                         <tr>
                             <td class="boxcard">&nbsp;</td>
                             <td class="colbtn" colspan="2">
