--- a/Template/404.html
+++ b/Template/404.html
@@ -1,6 +1,14 @@
 <div class="wrap">
     <div class="localpath"><a href="#">Trang chủ</a><span class="sprt icolocalpath"></span><a href="#">Mua mã thẻ điện thoại</a><span class="sprt icolocalpath"></span><em>Viettel</em></div>
-    <div class="boxpayment clearfix">
-        Trang bạn đánh không có hoặc không hợp lệ
+    <div class="main clearfix">
+    	<div class="wrap">
+            <div class="boxcontent clearfix">
+            	<div class="bxnotfound">
+                	<img src="{{static_url}}/images/404.png" alt="">
+                    <p>We’re sorry, but the page you are looking for doesn’t exist.</p>
+                    <a class="btnaction" href="/">Quay lại trang chủ</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
