--- a/Template/payment_finish.html
+++ b/Template/payment_finish.html
@@ -42,6 +42,12 @@
                     </tbody>
                 </table>
                 {{/CARD}}
+                
+                <div class="row ctnbtn">
+                    <span class="row_st">&nbsp;</span>
+                    <span class="row_nd"><a class="btnaction" href="/">Tiếp tục mua</a></span>
+                    <span class="row_rd">&nbsp;</span>
+                </div>
             </div>
         </div>
         <div class="colsecond fr">
